@@ -38,6 +38,6 @@ int procGetCPU(float *l1, float *l5, float *l15);
 int procGetStreamstor(int *busy);
 
 /* returns number of processes killed */
-int killSuProcesses();
+int killSuProcesses(int verbose);
 
 #endif
